--- a/final_project/package.json
+++ b/final_project/package.json
@@ -14,7 +14,6 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.19",
-    "react-router-dom": "^6.22.3"
+    "nodemon": "^2.0.19"
   }
 }
